fix aliasing on firefox, add gradient shadow to interior

--- a/src/App.css
+++ b/src/App.css
@@ -21,8 +21,8 @@
 
 html,
 body {
-	width: 100%;
-	height: 100%;
+	width: 100vw;
+	height: 100vh;
 	margin: 0;
 }
 body {
@@ -43,8 +43,8 @@ body {
 	padding: 0;
 	margin: 0;
 	position: relative;
-	-ms-perspective: 800px;
-	perspective: 800px;
+	-ms-perspective: 1200px;
+	perspective: 1200px;
 	perspective-origin: left;
 }
 
@@ -62,11 +62,6 @@ body {
 	object-position: top left;
 }
 
-.frontCard .back {
-
-	/* border: 2px solid tomato; */
-}
-
 .card {
 	width: 100%;
 	height: 100%;
@@ -74,7 +69,8 @@ body {
 	transform-style: preserve-3d;
 	transition: transform .5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 	transform-origin: left;
-	}
+
+}
 
 .card div {
 	background-color: "white";
@@ -84,13 +80,11 @@ body {
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 	display: -ms-flexbox;
-	display: box;
 	display: flex;
 	-o-box-pack: center;
 	justify-content: center;
 	-o-box-align: center;
 	align-items: center;
-	font: 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
 	-webkit-font-smoothing: antialiased;
 }
 
@@ -101,15 +95,16 @@ body {
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 	display: -ms-flexbox;
-	display: box;
 	display: flex;
 	-o-box-pack: center;
 	justify-content: center;
 	-o-box-align: center;
 	align-items: center;
-	font: 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
 	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: auto;
 	box-shadow: rgba(33, 35, 38, 0.75) 0px 10px 10px -10px;
+	outline: 1px solid transparent;
+
 }
 .card .back {
 	transform: rotateY(-180deg);
@@ -123,27 +118,38 @@ body {
 
 .card.perspective1 {
 	z-index: 1;
-	transform: rotateY(-170deg);
+	transform: rotateY(-145deg);
 }
 
 .card.perspective2 {
 	z-index: 1;
-	transform: rotateY(-180deg);
+	transform: rotateY(-175deg);
 }
 
 .backCard.perspective0 {
 	z-index: 0;
-	transform: rotateY(0deg);
+	transform: rotateY(-5deg);
 }
 
 .backCard.perspective1 {
-	transform: rotateY(0deg);
+	transform: rotateY(-5deg);
 	z-index: 0;
+}
 
+
+.frontCard.perspective1::before {
+	content: "";
+	z-index: 10;
+	position: absolute;
+	display: block;
+	width: 100%;
+	height: 100%;
+	background: linear-gradient(90deg,rgba(0, 0, 0, 0.38) 0%, rgba(255, 255, 255, 0) 85%, rgba(255, 255, 255, 0) 100%);
+	filter: blur(5px);
 }
 
 .backCard.perspective2 {
-	transform: rotateY(-170deg);
+	transform: rotateY(-175deg);
 	z-index: 1;
 }
 
